kubernetes/k3s/gateway/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: azure-aks-iot-platform
  labels:
    app.kubernetes.io/part-of: azure-aks-iot-platform
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
