kubernetes/k3s/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: azure-aks-iot-platform
  namespace: azure-aks-iot
  labels:
    app.kubernetes.io/part-of: azure-aks-iot-platform
spec:
  gatewayClassName: azure-aks-iot-platform

  listeners:
    - name: http
      protocol: HTTP
      port: 80

      allowedRoutes:
        namespaces:
          from: Same
